# testnets

./: Cargo.toml
eerie/: .gitignore  Cargo.toml  genesis.json
eerie/src/: coin.rs  main.rs  staking.rs
fresh/: Cargo.toml  README.md  genesis.json
fresh/src/: coin.rs  main.rs  staking.rs
src/: coin.rs  main.rs  staking.rs
