[package]
name = "eerie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed = { git = "https://github.com/nomic-io/ed", rev = "f79dce84a94cc6938946888c52be77aa0fd4fb9c"}
failure = "0.1.8"
orga = { git = "https://github.com/nomic-io/orga", rev = "7978131f7d26c53c382d4a453d7f595b1701c23c", features = [ "merk", "abci" ] }
tokio = "1.12.0"
